--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,8 @@ steps:
 - script: |
     npm run build
   displayName: 'npm build'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
